# grundschule_timetabler

./: .env.docker  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  DOCKER_REGISTRY.md  ERD.md  README.md  TROUBLESHOOTING.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  API.md  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 15b0cf10a170_add_subject_model.py  214fec70abb4_add_teacher_availability_model.py  4360045a52c4_add_schedule_model.py  71430f948602_initial_migration_with_teacher_model.py  90410194aba9_add_class_model.py  b8ae630b1c91_add_teacher_subject_model.py  d2943aff3428_add_timeslot_model.py  f6170fe90d24_remove_grades_check_constraint.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/src/: config.py  main.py
backend/src/models/: __init__.py  class_.py  database.py  schedule.py  subject.py  teacher.py  teacher_availability.py  teacher_subject.py  timeslot.py
backend/src/schemas/: class_.py  schedule.py  schedule_template.py  subject.py  teacher.py  teacher_availability.py  teacher_subject.py  timeslot.py
backend/src/seeders/: __init__.py  run.py  schedule.py  seeder.py  teacher_subject_seeder.py  timeslot_seeder.py
backend/tests/: conftest.py  test_class.py  test_health.py  test_schedule.py  test_scheduling_algorithm.py  test_scheduling_performance.py  test_subject.py  test_teacher.py  test_teacher_availability.py  test_teacher_subject.py  test_timeslot.py
(+87 files in other folders)
